* Add optional Perforce password (CC-208). Patch by J D Glanville

ProjectXMLHelper:
----------------------
* Added support for Ant-style properties in the config file (CC-132). Patch by Robert Smith

RSSPublisher:
----------------------
* Submitted by Patrick Conant. Patched by Jerome Lacoste.

SCPPublisher:
----------------------
* No longer remove first char from xml log file path, since it now causes errors. Patch by Dan Penhurst
* Added property to specify the source separator. Patch by Dan Penhurst.

Script & ScriptRunner
----------------------
* Refactor common "Script" logic out of AntBuilder, NantBuilder and MavenBuilder (CC-178). Patch by Eric Pugh

SelfConfiguringPlugin:
----------------------
* Add new SelfConfiguringPlugin interface. Submitted by Jeff Ramsdale

SocketPublisher:
----------------
* Simple publisher that writes "Success" or "Failure" to a socket.  Written by Darren Cotteril.

SourceControl:
----------------
* Remove setProperty() and setPropertyOnDelete(). This unifies the handling for sourcecontrols that don't support the attribute. Patch by Jerome Lacoste

StarTeam:
----------------------
* Change default for preloadfileinformation to true (CC-281). Patch by Lee Marlow

StarTeamBootstrapper:
----------------------
* Prevent StarTeam from needing user interaction (CC-189). Patch by Lee Marlow

TimeBuild:
----------------------
* Add new source control that will trigger a build at a specified time. Submitted by Eric Pugh
* Add docs and add to default-plugins.properties. Patch by Jerome Lacoste

ValidationHelper:
----------------------
* Create helper class for plugins to use during validation. Submitted by Jerome Lacoste

VSS(Journal):
----------------------
* Create SimpleDateFormats with Locale.US to fix JUnit build failure on Chinese Windows systems (CC-153 & CC-156)

reporting jsp app
======================

BuildInfo:
----------------------
* Added better exception message to make debugging easier (CC-49). Patch by Jerome Lacoste